--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/assets/.*",
             "status": 308,
             "headers": {
                 "Location": "http://achowba.dev/"
