--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,3 @@
 {
-    "version": 2,
-    "routes": [
-        {
-            "src": "/assets",
-            "status": 308,
-            "headers": {
-                "Location": "https://achowba.dev/"
-            }
-        },
-        {
-            "src": "/assets/",
-            "status": 308,
-            "headers": {
-                "Location": "https://achowba.dev/"
-            }
-        }
-    ]
+    "version": 2
 }
