--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#d04649",
-        "activityBar.activeBorder": "#37cb34",
+        "activityBar.background": "#1a1a1a",
+        "activityBar.activeBorder": "#606020",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#37cb34",
-        "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#b52e31",
-        "titleBar.inactiveBackground": "#b52e3199",
+        "activityBarBadge.background": "#606020",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "titleBar.activeBackground": "#000000",
+        "titleBar.inactiveBackground": "#00000099",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#b52e31",
-        "statusBarItem.hoverBackground": "#d04649",
+        "statusBar.background": "#000000",
+        "statusBarItem.hoverBackground": "#1a1a1a",
         "statusBar.foreground": "#e7e7e7",
-        "activityBar.activeBackground": "#d04649"
+        "activityBar.activeBackground": "#1a1a1a",
+        "sash.hoverBorder": "#1a1a1a",
+        "statusBarItem.remoteBackground": "#000000",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799"
     },
-    "peacock.color": "#b52e31"
+    "peacock.color": "#000000"
 }
